[gd_scene load_steps=5 format=3 uid="uid://byibymnmq0dka"]

[ext_resource type="Script" path="res://Scripts/Core/Game.gd" id="1_0tbf3"]
[ext_resource type="PackedScene" uid="uid://bnt5srpmcorsp" path="res://Scenes/Core/KeyGameScene.tscn" id="2_rollb"]
[ext_resource type="Theme" uid="uid://dctl106ecm0df" path="res://Assets/UI_Theme.tres" id="3_uepxn"]
[ext_resource type="Script" path="res://Scripts/Core/UpgradesContainer.gd" id="4_rg1yg"]

[node name="Game" type="Node2D" groups=["Game"]]
script = ExtResource("1_0tbf3")
key_scene = ExtResource("2_rollb")

[node name="KeySceneContainer" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="EndGamePanel" type="Panel" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
offset_left = 292.0
offset_top = 36.0
offset_right = 789.0
offset_bottom = 635.0

[node name="FinalScore" type="Label" parent="CanvasLayer/EndGamePanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 2.0
offset_top = 137.0
offset_right = 505.0
offset_bottom = 267.0
theme_override_font_sizes/font_size = 64
text = "Final Score: "

[node name="NewGame" type="Button" parent="CanvasLayer/EndGamePanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 149.0
offset_top = 245.0
offset_right = 325.0
offset_bottom = 298.0
theme_override_font_sizes/font_size = 32
text = "New Game"

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1152.0
mouse_filter = 2

[node name="UpgradePanel" type="Panel" parent="CanvasLayer/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -478.5
offset_top = -200.0
offset_right = 478.5
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_uepxn")

[node name="UpgradesContainer" type="HBoxContainer" parent="CanvasLayer/Control/UpgradePanel"]
layout_mode = 0
offset_left = 60.0
offset_top = 43.0
offset_right = 890.0
offset_bottom = 363.0
theme_override_constants/separation = 190
alignment = 1
script = ExtResource("4_rg1yg")

[connection signal="pressed" from="CanvasLayer/EndGamePanel/NewGame" to="." method="_on_new_game_pressed"]
